# brief-matrix

./: AGENTS.md  PRODUCT_BRIEF.md  README.md  STATUS.md  SYSTEM_MAP.md  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
brief_matrix/: __init__.py  __main__.py  calibrate.py  cli.py  ledger.py  loader.py  report.py  score.py  voice_gate.py
brief_matrix/fetchers/: __init__.py  fixture.py
data/ledger/: 2026-W25-procurement-analyst-calibration-run.jsonl
decisions/: DEC-BM-001-v0-persona-choice.md  DEC-BM-002-three-axis-calibration.md
docs/: METHODOLOGY.md  first-pr.md
review-queue/procurement-analyst/: 2026-W34.md
schemas/: brief.schema.json  calibration-run.schema.json  review-record.schema.json  tenant.schema.json
scripts/: validate_schemas.py  validate_tenants.py  voice_lint.py
specs/0001-foundation/: acceptance.md  design.md  requirements.md  tasks.md
specs/0002-design/: acceptance.md  design.md  requirements.md  tasks.md
tenants/procurement-analyst/: config.yaml  sources.yaml  voice_overrides.yaml
tenants/procurement-analyst/specs/: section-structure.yaml
tests/: conftest.py  test_calibrate.py  test_cli.py  test_loader.py  test_report.py  test_voice_gate.py
